--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 
 
 
+
+:root {
+    --footer-horizontal-padding: 0px;
+}
+
+
+* {
+    box-sizing: content-box;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -59,19 +69,27 @@ footer {
 footer a {
     color: rgba(0,0,0,.54);
     text-decoration: none;
+    border: 0px solid blue;
+    margin: 15px;
 }
 
 footer a:hover {
     text-decoration: underline;
 }
 
+.footer-bottom-el {
+    border: 0px solid red;
+    padding: 15px;
+}
+
+
 .footer-top {
     border-bottom: 1px solid rgb(218, 220, 224);
     font-size: 15px;
     padding-bottom: 15px;
-    padding-left: 30px;
-    padding-right: 30px;
     padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .footer-bottom {
@@ -79,6 +97,12 @@ footer a:hover {
     align-items: center;
     flex-direction: row;   
     justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: var(--footer-horizontal-padding);
+    padding-right: var(--footer-horizontal-padding);
+}
+
+.leaf-icon {
+    width: 12px;
+    height: auto;
+    margin-right: 2px;
 }
