--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ header a {
     flex: 1;
 }
 
+
+.spacer {
+    /* background-color: yellow; */
+    width: 100px;
+    height: calc(100vh - 560px);
+    max-height: 290px;
+    min-height: 92px;
+}
+
 .search-bar {
     padding: 26px;
 }
@@ -86,11 +95,6 @@ footer a {
     margin: 15px;
 }
 
-.footer-bottom-el {
-    border: 0px solid red;
-    padding: 15px;
-}
-
 
 .footer-top {
     border-bottom: 1px solid rgb(218, 220, 224);
@@ -110,6 +114,21 @@ footer a {
     padding-right: var(--footer-horizontal-padding);
 }
 
+
+@media only screen and (max-width: 4600px) {
+    .footer-bottom {
+        display: flex-grid;
+
+    }
+}
+
+
+.footer-bottom-el {
+    border: 0px solid red;
+    padding: 15px;
+}
+
+
 .leaf-icon {
     width: 12px;
     height: auto;
@@ -125,3 +144,5 @@ footer a {
     padding-right: 23px;
     border-radius: 4px;
 }
+
+
